finish training basic opponent

--- a/train.ini
+++ b/train.ini
@@ -1,5 +1,5 @@
 [ENV]
-MAX_TIMESTEPS=40
+MAX_TIMESTEPS=53
 ROWS = 3
 COLS = 3
 CELLS = 9
@@ -7,34 +7,34 @@ S_PORT=8000
 A_PORT=8001
 R_PORT=8002
 MAX_MSG_SIZE=512
-SLEEP_TIME=0.0025
+SLEEP_TIME=0.005
 
 [REWARD]
 WIN_REWARD=.64
-CELL_REWARD=0.1
+CELL_REWARD=0.05
 VALID_REWARD=0.01
 INVALID_PENALTY=-1
-# LossPenalty=-.1-CellReward-ValidReward
-LOSS_PENALTY = -0.21
+# LossPenalty=-.25-CellReward-ValidReward
+LOSS_PENALTY = -0.36
 
 [BUFFER]
 GAMMA=0.99
 LAM=0.95
 
 [LOSS]
-CLIP_RATIO = 3e-4
-TARGET_KL = 0.3
-VALUE_COEFFICIENT = 0.25
+CLIP_RATIO = .1
+TARGET_KL = 0.005
+VALUE_COEFFICIENT = 0.65
 ENTROPY_COEFFICIENT = 1e-5
 REGULARIZER_COEFFICIENT = 1
 
 [OPTIMIZER]
-LEARNING_RATE=1e-6
+LEARNING_RATE=3e-6
 
 [TRAIN]
-TRAIN_ITERATIONS = 1
+TRAIN_ITERATIONS = 2
 EPOCHS = 240
-MINIBATCH_SIZE=14000
+MINIBATCH_SIZE=15000
 # STEPS_PER_EPOCH should be a multiple of minibatch_size
-STEPS_PER_EPOCH = 14000
-EPOCH = 1663
+STEPS_PER_EPOCH = 75000
+EPOCH = 4995
