--- a/train.ini
+++ b/train.ini
@@ -1,5 +1,5 @@
 [ENV]
-MAX_TIMESTEPS=53
+MAX_TIMESTEPS=35
 ROWS = 3
 COLS = 3
 CELLS = 9
@@ -10,31 +10,34 @@ MAX_MSG_SIZE=512
 SLEEP_TIME=0.005
 
 [REWARD]
-WIN_REWARD=.64
-CELL_REWARD=0.05
+WIN_REWARD=.60
+CELL_REWARD=0.15
 VALID_REWARD=0.01
 INVALID_PENALTY=-1
-# LossPenalty=-.25-CellReward-ValidReward
-LOSS_PENALTY = -0.36
+TIMEOUT_PENALTY=-0.25
+LOSS_PENALTY = -.125
+TIE_REWARD = .125
 
 [BUFFER]
 GAMMA=0.99
 LAM=0.95
 
 [LOSS]
-CLIP_RATIO = .1
-TARGET_KL = 0.005
-VALUE_COEFFICIENT = 0.65
-ENTROPY_COEFFICIENT = 1e-5
-REGULARIZER_COEFFICIENT = 1
+CLIP_RATIO = .15
+TARGET_KL = 0.2
+CLIP_COEF = 1
+VALUE_COEFFICIENT = .65
+ENTROPY_COEFFICIENT = 3e-4
+INVALID_COEFFICIENT = 2
+REGULARIZER_COEFFICIENT = 0.0005
 
 [OPTIMIZER]
-LEARNING_RATE=3e-6
+LEARNING_RATE=1e-5
 
 [TRAIN]
-TRAIN_ITERATIONS = 2
+TRAIN_ITERATIONS = 4
 EPOCHS = 240
-MINIBATCH_SIZE=15000
+MINIBATCH_SIZE=16000
 # STEPS_PER_EPOCH should be a multiple of minibatch_size
-STEPS_PER_EPOCH = 75000
-EPOCH = 4995
+STEPS_PER_EPOCH = 80000
+EPOCH = 2330
