change uttt to persist when training ai

--- a/train.ini
+++ b/train.ini
@@ -1,43 +1,43 @@
 [ENV]
-MAX_TIMESTEPS=35
+MAX_TIMESTEPS=50
 ROWS = 3
 COLS = 3
 CELLS = 9
 S_PORT=8000
 A_PORT=8001
 R_PORT=8002
-MAX_MSG_SIZE=1024
+MAX_MSG_SIZE=1200
 SLEEP_TIME=0.005
 
 [REWARD]
-WIN_REWARD=.60
+WIN_REWARD=.70
 CELL_REWARD=0.15
 VALID_REWARD=0.01
 INVALID_PENALTY=-1
-TIMEOUT_PENALTY=-0.25
-LOSS_PENALTY = -.125
+TIMEOUT_PENALTY=-0.85
+LOSS_PENALTY = -.45
 TIE_REWARD = .125
 
 [BUFFER]
-GAMMA=0.99
-LAM=0.95
+GAMMA=0.999
+LAM=0.8
 
 [LOSS]
-CLIP_RATIO = .15
-TARGET_KL = 0.2
-CLIP_COEF = 1
-VALUE_COEFFICIENT = .65
-ENTROPY_COEFFICIENT = 3e-4
-INVALID_COEFFICIENT = 2
-REGULARIZER_COEFFICIENT = 0.0005
+CLIP_RATIO = .1
+TARGET_KL = 0.01
+CLIP_COEF = 4
+VALUE_COEFFICIENT = .5
+ENTROPY_COEFFICIENT = 3e-3
+INVALID_COEFFICIENT = 12
+REGULARIZER_COEFFICIENT = 1e-5
 
 [OPTIMIZER]
-LEARNING_RATE=1e-5
+LEARNING_RATE=3e-6
 
 [TRAIN]
-TRAIN_ITERATIONS = 4
-EPOCHS = 240
-MINIBATCH_SIZE=4000
+TRAIN_ITERATIONS = 2
+EPOCHS = 120
+MINIBATCH_SIZE=20000
 # STEPS_PER_EPOCH should be a multiple of minibatch_size
-STEPS_PER_EPOCH = 16000
-EPOCH = 2330
+STEPS_PER_EPOCH = 40000
+EPOCH = 1051
