add AI opponent

--- a/train.ini
+++ b/train.ini
@@ -1,5 +1,5 @@
 [ENV]
-MAX_TIMESTEPS=50
+MAX_TIMESTEPS=45
 ROWS = 3
 COLS = 3
 CELLS = 9
@@ -10,34 +10,34 @@ MAX_MSG_SIZE=1200
 SLEEP_TIME=0.005
 
 [REWARD]
-WIN_REWARD=.70
-CELL_REWARD=0.15
+WIN_REWARD=.65
+CELL_REWARD=0.13
 VALID_REWARD=0.01
 INVALID_PENALTY=-1
 TIMEOUT_PENALTY=-0.85
-LOSS_PENALTY = -.45
+LOSS_PENALTY = -0.3
 TIE_REWARD = .125
 
 [BUFFER]
-GAMMA=0.999
-LAM=0.8
+GAMMA=0.99
+LAM=0.85
 
 [LOSS]
 CLIP_RATIO = .1
 TARGET_KL = 0.01
-CLIP_COEF = 4
-VALUE_COEFFICIENT = .5
-ENTROPY_COEFFICIENT = 3e-3
-INVALID_COEFFICIENT = 12
+CLIP_COEF = 5
+VALUE_COEFFICIENT = .65
+ENTROPY_COEFFICIENT = 1e-4
+INVALID_COEFFICIENT = 8
 REGULARIZER_COEFFICIENT = 1e-5
 
 [OPTIMIZER]
-LEARNING_RATE=3e-6
+LEARNING_RATE=5e-6
 
 [TRAIN]
 TRAIN_ITERATIONS = 2
-EPOCHS = 120
-MINIBATCH_SIZE=20000
+EPOCHS = 240
+MINIBATCH_SIZE=13000
 # STEPS_PER_EPOCH should be a multiple of minibatch_size
-STEPS_PER_EPOCH = 40000
-EPOCH = 1051
+STEPS_PER_EPOCH = 52000
+EPOCH = 2291
